--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
     </div>
     <script type="module" src="js/constants.js" defer></script>
     <script type="module" src="js/addToTask.js" defer></script>
+    <script type="module" src="js/deleteTask.js" defer></script>
   </body>
 </html>
