--- a/index.html
+++ b/index.html
@@ -25,19 +25,18 @@
         </button>
       </div>
 
-      <!-- ****************** content section where to show list of tasks. un order list akare show korabo ************************-->
-      <div class="content">
-        <ul id="list"></ul>
-      </div>
-
-      <!-- ******************* add to to button jekhan theke task add er kaj korbo -->
+      <!-- ******************* addtoTask input interface ****************** -->
       <div class="hide" id="inputTask">
-        <!-- <i class="fa fa-plus-circle"></i> -->
         <input type="text" id="input" placeholder="Add a Todo" /> <br />
         <button id="addTaskButton">Add Task</button>
         <div class="trashInput">
           <img src="icons/delete.svg" job="delete" id="0" />
         </div>
+      </div>
+
+      <!-- ****************** content section having unorder list ************************-->
+      <div class="content">
+        <ul id="list"></ul>
       </div>
     </div>
     <script type="module" src="js/constants.js" defer></script>
