--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
     <script type="module" src="js/addToTask.js" defer></script>
     <script type="module" src="js/deleteTask.js" defer></script>
     <script type="module" src="js/markDone.js" defer></script>
+    <script type="module" src="js/editTask.js" defer></script>
   </body>
 </html>
