--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
       <div class="content">
         <ul id="list"></ul>
       </div>
+      <button id="load-more">load more</button>
+      <button class="show-less">Show less</button>
     </div>
     <script type="module" src="js/constants.js" defer></script>
     <script type="module" src="js/addToTask.js" defer></script>
     <script type="module" src="js/deleteTask.js" defer></script>
     <script type="module" src="js/markDone.js" defer></script>
     <script type="module" src="js/editTask.js" defer></script>
+    <script type="module" src="js/addPagination.js" defer></script>
   </body>
 </html>
