after 3rd review

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </button>
       </div>
 
-      <!-- ******************* addtoTask input interface ****************** -->
+      <!--user input interface-->
       <div class="hide" id="inputTask">
         <input type="text" id="input" placeholder="Add a Todo" /> <br />
         <button id="addTaskButton">Add Task</button>
@@ -30,7 +30,7 @@
         </div>
       </div>
 
-      <!-- ****************** content section having unorder list ************************-->
+      <!--content section having TASK list-->
       <div class="content">
         <ul id="list"></ul>
       </div>
