--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       <!-- create button -->
       <div class="create">
         <h1>Add Tasks</h1>
+        <div name="todos" class="filter-todo">
+          <button value="all">All</button>
+          <button value="incompleted">Incomplete</button>
+          <button value="completed">Complete</button>
+        </div>
         <button id="createButton">
           <i class="fa-duotone fa-plus"></i>Create
         </button>
@@ -43,5 +48,6 @@
     <script type="module" src="js/markDone.js" defer></script>
     <script type="module" src="js/editTask.js" defer></script>
     <script type="module" src="js/addPagination.js" defer></script>
+    <!-- <script type="module" src="js/filterTask.js" defer></script> -->
   </body>
 </html>
