add pagination change 1

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <!-- create button -->
       <div class="create">
         <h1>Add Tasks</h1>
-        <div name="todos" class="filter-todo">
+        <!-- <div name="todos" class="filter-todo">
           <button value="all">All</button>
           <button value="incompleted">Incomplete</button>
           <button value="completed">Complete</button>
-        </div>
+        </div> -->
         <button id="createButton">
           <i class="fa-duotone fa-plus"></i>Create
         </button>
