vscode file in gitignore

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1>Add Tasks</h1>
         <button id="createButton">
           <i class="fa-duotone fa-plus"></i>Create
+          <i class="fa-duotone fa-plus"></i>gitignore
         </button>
       </div>
 
