--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
         <h1>Add Tasks</h1>
         <button id="createButton">
           <i class="fa-duotone fa-plus"></i>Create
-          <i class="fa-duotone fa-plus"></i>gitignore
         </button>
       </div>
 
       <!--user input interface-->
       <div class="hide" id="inputTask">
         <input type="text" id="input" placeholder="Add a Todo" /> <br />
-        <button id="addTaskButton">Add Task</button>
+        <button id="addTaskButton">Add Task 9k</button>
         <div class="trashInput">
           <img src="icons/delete.svg" job="delete" id="0" />
         </div>
