--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!--user input interface-->
       <div class="hide" id="inputTask">
         <input type="text" id="input" placeholder="Add a Todo" /> <br />
-        <button id="addTaskButton">Add Task 9k</button>
+        <button id="addTaskButton">Add Task</button>
         <div class="trashInput">
           <img src="icons/delete.svg" job="delete" id="0" />
         </div>
