--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul id="list"></ul>
       </div>
       <button id="Load-more">Load more</button>
-      <button class="Show-less"  style="display: none;">Show less</button>
+      <button id="Show-less">Show less</button>
     </div>
     <script type="module" src="js/constants.js" defer></script>
     <script type="module" src="js/addToTask.js" defer></script>
