step -6: styling issue and concise function fixed

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div class="content">
         <ul id="list"></ul>
       </div>
-      <button id="Load-more">Load more</button>
-      <button id="Show-less">Show less</button>
+      <button id="load-more">Load more</button>
+      <button id="show-less">Show less</button>
     </div>
     <script type="module" src="js/constants.js" defer></script>
     <script type="module" src="js/addToTask.js" defer></script>
