bootstrap js files into a single file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <ul id="list"></ul>
       </div>
     </div>
-    <script type="module" src="js/constants.js" defer></script>
-    <script type="module" src="js/addToTask.js" defer></script>
+    <script type="module" src="js/scripts.js" defer></script>
   </body>
 </html>
