--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
 
       <!--user input interface-->
-      <div class="hide" id="inputTask">
+      <div class="hide inputTask" id="inputTask">
         <input type="text" id="input" placeholder="Add a Todo" />
         <button id="addTaskButton">Add Task</button>
         <div class="trashInput">
